Fix up buttons letter spacing.

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -13,7 +13,7 @@
 		background-color: $button-bg-color;
 		color: $white;
 		font: 400 12px/16px $font;
-		letter-spacing: -0.2px;
+		letter-spacing: -.025em;
 		text-transform: uppercase;
 		text-align: center;
 		text-decoration: none;
